--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">mytaxi Test</string>
+
+    <string name="normal_taxi_type">Normal</string>
+    <string name="pooling_taxi_type">Pooling</string>
 </resources>
