--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
 
     <string name="normal_taxi_type">Normal</string>
     <string name="pooling_taxi_type">Pooling</string>
+
+    <string name="list_error_message">Something went wrong, you can try and refresh by pulling down</string>
 </resources>
