--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="list_error_message">Something went wrong, you can try and refresh by pulling down</string>
     <string name="title_activity_taxi_map">Map</string>
     <string name="menu_option_map">Map</string>
+
+    <string name="map_search_button_text">Search here</string>
 </resources>
